--- a/applications/calc_multilook_number.ipynb
+++ b/applications/calc_multilook_number.ipynb
@@ -15,21 +15,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is the Open Source version of ISCE.\n",
-      "Some of the workflows depend on a separate licensed package.\n",
-      "To obtain the licensed package, please make a request for ISCE\n",
-      "through the website: https://download.jpl.nasa.gov/ops/request/index.cfm.\n",
-      "Alternatively, if you are a member, or can become a member of WinSAR\n",
-      "you may be able to obtain access to a version of the licensed sofware at\n",
-      "https://winsar.unavco.org/software/isce\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -90,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -137,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -244,6 +226,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TerraSAR-X StripMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extract metadata from ISCE/stripmapStack shelve file: /Users/yunjunz/data/usa/florida/MiamiTsxD36/reference/data.dat\n",
+      "near   incidence angle : 43.4114 degree\n",
+      "center incidence angle : 44.4864 degree\n",
+      "far    incidence angle : 45.5614 degree\n",
+      "Azimuth     pixel size : 2.1\n",
+      "Azimuth ground spacing : 2.0\n",
+      "Azimuth ground spacing : 9.9 after multilooking by 5\n",
+      "Range       pixel size : 1.4\n",
+      "Range   ground spacing : 1.9\n",
+      "Range   ground spacing : 9.7 after multilooking by 5\n",
+      "extract metadata from ISCE/stripmapStack shelve file: /Users/yunjunz/data/usa/florida/MiamiTsxD36/reference/data.dat\n",
+      "near   incidence angle : 43.4114 degree\n",
+      "center incidence angle : 44.4864 degree\n",
+      "far    incidence angle : 45.5614 degree\n",
+      "Azimuth     pixel size : 2.1\n",
+      "Azimuth ground spacing : 2.0\n",
+      "Azimuth ground spacing : 9.9 after multilooking by 5\n",
+      "Range       pixel size : 1.4\n",
+      "Range   ground spacing : 1.9\n",
+      "Range   ground spacing : 9.7 after multilooking by 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "meta_file = os.path.expanduser('~/data/usa/florida/MiamiTsxD36/reference/data.dat')\n",
+    "isce_utils.resolution2multilook_number(meta_file, resolution=10)\n",
+    "isce_utils.multilook_number2resolution(meta_file, az_looks=5, rg_looks=5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -253,7 +280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -267,9 +294,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
